[package]
name = "learning_grounds"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
version = "0.17.3"
features = [
    "bevy_log", # Logging to console
    "std",      # Use the Rust standard library (important!)
    "dynamic_linking", # DEV USAGE ONLY, REMOVE FOR RELEASE
]

[dependencies]
bevy_ecs_ldtk = "0.13.0"
bevy_ecs_tilemap = "=0.17.0"
rand = "0.9.2"

[[bin]]
name = "learning_grounds"
path = "main.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
